# transmission-remote-gtk

./: .clang-format  .git-blame-ignore-revs  .gitattributes  .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  TODO  aclocal.m4  autogen.sh  config.h.in  configure.ac  meson.build  meson_options.txt  transmission-remote-gtk.pot
.github/workflows/: c-cpp.yml  clang-format.yml
data/: Makefile.am  io.github.TransmissionRemoteGtk.appdata.xml.in  io.github.TransmissionRemoteGtk.desktop.in  io.github.TransmissionRemoteGtk.gresource.xml  meson.build  transmission-remote-gtk.1.rst.in  transmission-remote-gtk.appdata.xml.in  transmission-remote-gtk.desktop.in  uk.org.eth0.transmission-remote-gtk.appdata.xml.in
data/icons/: Makefile.am
data/ui/: labels-dialog.ui
debian/: changelog  control  copyright  docs  rules
extra/: eclipse-paths-gtk3.xml  eclipse-paths.xml  tpull.sh
freebsd/: Makefile  distinfo  pkg-descr  pkg-plist
m4/: desktop.m4
po/: LINGUAS  Makevars  POTFILES.in  bg.po  ca.po  cs.po  de.po  el.po  es.po  fo.po  fr.po  hu.po  it.po  ko.po  lt.po  lv.po  meson.build  pl.po  pt_BR.po  ru.po  si.po  sv.po  tr.po  transmission-remote-gtk.pot  uk.po  zh_CN.po  zh_TW.po
redhat/: transmission-remote-gtk.spec
scripts/: pre-commit  release.sh  tpull.sh  valgrind.sh
src/: Makefile.am  base64.c  base64.h  bencode.c  bencode.h  dispatch.c  dispatch.h  hig.c  hig.h  http.c  http.h  icon-turtle.h  icons.c  icons.h  installer-gtk2.nsi  installer.nsi  json.c  json.h  main.c  meson.build  protocol-constants.h  remote-exec.c  remote-exec.h  requests.c  requests.h  session-get.c  session-get.h  tfile.c  tfile.h  torrent-cell-renderer.c  torrent-cell-renderer.h  torrent.c  torrent.h  tpeer.c  tpeer.h  transmission-remote-gtk.appdata.xml  transmission-remote-gtk.desktop  transmission-remote-gtk.desktop.in  transmission-remote-gtk.pod  transmission-remote-gtk.schemas  (+124 more)
